# document-subject-classification

./: Final_Training_data_Exploration_Notebook.ipynb  LICENSE.txt  README.md  Raw_Data_Exploration_Base_Model_Training.ipynb  Subject_Classification_Final_Notebook.ipynb
document-subject-classification-training/: README.md  Raw_Data_Exploration_Base_Model_Training.ipynb  pyproject.toml  requirements.txt
document-subject-classification-training/document_subject_classification_training/: config.json  constants.py  custom_subject_data_loader.py  prepare_data.py  prepare_data_spam_csv.py  run.py  run_inference.py  update_config.py
document-subject-classification-training/document_subject_classification_training/Utils/: bert_training_utils.py  data_preparation_utils.py  utils.py
document-subject-classification-training/document_subject_classification_training/models/: bert_classifier.py
