[tool.poetry]
name = "document-subject-classification-training"
version = "0.1.0"
description = ""
authors = ["Anustup Das <anustup.d@rediffmail.com>"]
readme = "README.md"
packages = [{include = "document_subject_classification_training"}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "4.30.2"
scikit-learn = "1.2.2"
torch = "2.0.1"
nltk = "3.8.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
